--- a/feed-app/src/user/login/login.css
+++ b/feed-app/src/user/login/login.css
@@ -1,13 +1,15 @@
 .login-container {
-  max-width: 420px;
-  margin: 0 auto;
-  margin: 0 auto;
-  margin-top: 40px;
-  padding: 50px 50px 0px 50px;
-  border: 1px solid #e1e0e0;
-  background-color: #fff;
-  font-size: 32px;
+  max-width: 400px;
+   margin: 0 auto;
+  margin-top: 100px !important;
+  /* padding: 50px 50px 0px 50px;  */
+  border: 2px solid #001529;
+  border-radius: 1pc;
+text-align: center;
+  background-color: white;
+  font-size: 22px;
   font-weight: 700;
+  font-family: monospace;
 }
 
 .signup-link-container {
@@ -16,17 +18,30 @@
   max-width: 420px;
   margin: 0 auto;
   margin: 0 auto;
-  margin-top: 10px;
-  padding: 20px;
-  border: 1px solid #e1e0e0;
-  background-color: #fff;
-  color: #999;
+  margin-top: 15px;
+  padding: 10px;
+  /* border: 2px solid rgb(79 70 229);;
+  border-radius: 1pc; */
+  background-color: white;
+  font-family: monospace;
+
 }
 
 .signup-link-container a {
-  margin-left: 5px;
-  font-weight: bold;
-  color: #003569;
+  color:  red !important;
+    font-size: x-large;
+    font-family: monospace;
+
+    text-decoration: underline !important;
+}
+
+
+.main-container{
+  display: flex;
+  align-items: center;
+  background-color: white !important;
+  margin-bottom: 2pc !important;
+
 }
   
   .login-form-button {
@@ -45,4 +60,16 @@
     width: 200px;
   }
 
-  
+  .ant-footer{
+    color: white !important;
+    background-color:#001529 !important ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1px !important;
+    padding: 1px !important;
+  }
+  .br-div{
+    background-color:#001529 !important ;
+
+  }
