--- a/feed-app/src/user/login/login.css
+++ b/feed-app/src/user/login/login.css
@@ -2,7 +2,7 @@
   max-width: 400px;
    margin: 0 auto;
   margin-top: 100px !important;
-  /* padding: 50px 50px 0px 50px;  */
+  padding: 50px 50px 0px 50px; 
   border: 2px solid #001529;
   border-radius: 1pc;
 text-align: center;
@@ -61,8 +61,8 @@ text-align: center;
   }
 
   .ant-footer{
-    color: white !important;
-    background-color:#001529 !important ;
+    /* color: white !important; */
+    /* background-color:#001529 !important ; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -70,6 +70,6 @@ text-align: center;
     padding: 1px !important;
   }
   .br-div{
-    background-color:#001529 !important ;
+    /* background-color:#001529 !important ; */
 
   }
